@@ -1,3 +1,8 @@
+2011-09-15  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/smoothstreamer/packetizer.py:
+	Fix how duration is calculated
+
 2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/muxers/mpegts/mpegts.py:
